--- a/charts/echoChart/Chart.yaml
+++ b/charts/echoChart/Chart.yaml
@@ -4,3 +4,8 @@ description: tralala
 type: application
 version: 0.1.0
 appVersion: "latest"
+
+dependencies:
+    - name: mongodb
+      version: 10.23.x
+      repository: https://charts.bitnami.com/bitnami
