--- a/charts/echoChart/values.yaml
+++ b/charts/echoChart/values.yaml
@@ -6,7 +6,7 @@ app:
   replicaCount: 3
   container:
     name: echoappv4
-    image: gcr.io/echoapp-320414/echoappv2:latest
+    image: gcr.io/echoapp-320414/echoapp:latest
     port: 3000
   requests:
     memory: "64Mi"
@@ -33,7 +33,7 @@ service:
   
 clusterIssuer:
   name: letsencrypt
-  namespace: cert-manager
+  namespace: default
   email: rz451997@gmail.com
   server: 'https://acme-v02.api.letsencrypt.org/directory'
   keyname: echo-issuer-account-key
@@ -54,7 +54,4 @@ ingress:
 mongodb:
   auth:
     rootPassword: password
-  
-
-
   architecture: "replicaset"
