--- a/releases/dev/echoapp.yaml
+++ b/releases/dev/echoapp.yaml
@@ -15,7 +15,11 @@ spec:
     ref: master
   values:
     app:
-      container:
-        image: gcr.io/echoapp-320414/echoappv2:latest
-      replicaCount: 1
+      replicaCount: 2
+    clusterIssuer:
+      namespace: dev
+    certificate:
+      namespace: dev
+    ingress:
+      namespace: dev
  
