--- a/releases/dev/echoapp.yaml
+++ b/releases/dev/echoapp.yaml
@@ -15,6 +15,8 @@ spec:
     ref: master
   values:
     app:
+      container:
+        tag: 1.0.0
       replicaCount: 3
     clusterIssuer:
       namespace: dev
