--- a/releases/dev/echoapp.yaml
+++ b/releases/dev/echoapp.yaml
@@ -14,6 +14,8 @@ spec:
     path: charts/echoChart
     ref: master
   values:
+    app:
+      replicaCount: 3
     clusterIssuer:
       namespace: dev
     certificate:
