--- a/charts/echoChart/values.yaml
+++ b/charts/echoChart/values.yaml
@@ -7,7 +7,7 @@ app:
   container:
     name: echoappv4
     image: gcr.io/echoapp-320414/echoapp
-    tag: ""
+    tag: "1.2.0"
     port: 3000
   requests:
     memory: "64Mi"
