--- a/releases/dev/echoapp.yaml
+++ b/releases/dev/echoapp.yaml
@@ -14,6 +14,9 @@ spec:
     path: charts/echoChart
     ref: master
   values:
+  app:
+    container:
+      tag: dev-1.0.0
     clusterIssuer:
       namespace: dev
     certificate:
