--- a/charts/echoChart/values.yaml
+++ b/charts/echoChart/values.yaml
@@ -6,7 +6,7 @@ app:
   replicaCount: 1
   container:
     name: echoappv4
-    image: gcr.io/echoapp-320414/echoapp
+    repository: gcr.io/echoapp-320414/echoapp
     tag: "1.2.0"
     port: 3000
   requests:
